--- a/css/main.css
+++ b/css/main.css
@@ -87,26 +87,18 @@ body {
   padding: 2em;
   position: absolute;
   width: 90%;
-  display: none;
-    
+  opacity:0;
   background-color: #000;
   border-radius: 6px;
+  transition: all 250ms linear;
 }
 
 .sales__details[data-state="active"]{
-    display: block;
-
-   
-
-    transition: 
-        opacity 1000ms linear,
-        transition: all 250ms linear;} 
-
-.sales__details:focus,
-   opacity: 0;
-    
-
+    opacity: 1;
+    margin-top: -.5em;
 }
+
+
 .sales__details::before {
   top: -10px;
   content: " ";
